# fable-meat-proxy

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/fable_meat_proxy/: __init__.py  __main__.py  client.py  config.py  errors.py  gmail_transport.py  meat.py  parsing.py  timing.py
tests/: conftest.py  test_async.py  test_client.py  test_config.py  test_meat.py  test_parsing.py  test_timing.py  test_transport.py
