[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fable-meat-proxy"
version = "0.1.0"
description = "A passthrough Anthropic client that routes Fable inference to a human over email (a 'meat proxy')."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["anthropic", "claude", "fable", "proxy", "human-in-the-loop", "gmail"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "anthropic>=0.40",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/plwp/fable-meat-proxy"
Repository = "https://github.com/plwp/fable-meat-proxy"

[project.scripts]
fable-meat-auth = "fable_meat_proxy.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fable_meat_proxy = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
